objects/Product_Alert_Email__c.object
<CustomObject>
    <description>Administrative object that manages an email address associated with region/priority/product communications on cases</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Critical</fullName>
                </value>
                <value>
                    <fullName>2-High</fullName>
                </value>
                <value>
                    <fullName>3-Medium</fullName>
                </value>
                <value>
                    <fullName>4-Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Family__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Exports</fullName>
                </value>
                <value>
                    <fullName>Acquisition Master</fullName>
                </value>
                <value>
                    <fullName>ADM 20/20</fullName>
                </value>
                <value>
                    <fullName>Admin/Tools</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Airtime Sales</fullName>
                </value>
                <value>
                    <fullName>Announcement Library</fullName>
                </value>
                <value>
                    <fullName>Availability List</fullName>
                </value>
                <value>
                    <fullName>Avails</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Client Profile</fullName>
                </value>
                <value>
                    <fullName>Commercial Library</fullName>
                </value>
                <value>
                    <fullName>Commercials</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Copy</fullName>
                </value>
                <value>
                    <fullName>Credit Management</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>DealMaker</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>Encoder (StreamZ Live EX)</fullName>
                </value>
                <value>
                    <fullName>eRevisions</fullName>
                </value>
                <value>
                    <fullName>Extreme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>6800+</fullName>
                </value>
                <value>
                    <fullName>A&lt;P</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>Baseband Versio</fullName>
                </value>
                <value>
                    <fullName>BrandNET</fullName>
                </value>
                <value>
                    <fullName>Broadband Support</fullName>
                </value>
                <value>
                    <fullName>Broadcast Master</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Centrio</fullName>
                </value>
                <value>
                    <fullName>ChannelONE</fullName>
                </value>
                <value>
                    <fullName>CIFS</fullName>
                </value>
                <value>
                    <fullName>Clocks</fullName>
                </value>
                <value>
                    <fullName>Clocks and Timers</fullName>
                </value>
                <value>
                    <fullName>CMN Series</fullName>
                </value>
                <value>
                    <fullName>Connectus</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>D-Series</fullName>
                </value>
                <value>
                    <fullName>DTP</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                </value>
                <value>
                    <fullName>FAME</fullName>
                </value>
                <value>
                    <fullName>G-Series</fullName>
                </value>
                <value>
                    <fullName>HView IP</fullName>
                </value>
                <value>
                    <fullName>HView SX Pro</fullName>
                </value>
                <value>
                    <fullName>ICM</fullName>
                </value>
                <value>
                    <fullName>IconStation</fullName>
                </value>
                <value>
                    <fullName>InfoCaster</fullName>
                </value>
                <value>
                    <fullName>InfoCaster Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Broadcast Graphics</fullName>
                </value>
                <value>
                    <fullName>Command &amp; Control</fullName>
                </value>
                <value>
                    <fullName>Compression &amp; Transport</fullName>
                </value>
                <value>
                    <fullName>Digital Asset Management</fullName>
                </value>
                <value>
                    <fullName>Digital Signage</fullName>
                </value>
                <value>
                    <fullName>Editing &amp; News</fullName>
                </value>
                <value>
                    <fullName>Media Software</fullName>
                </value>
                <value>
                    <fullName>Multiviewers</fullName>
                </value>
                <value>
                    <fullName>Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Routers</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Versio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Alert Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Priority__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Alert Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Alert Emails</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>